--- a/Solary_Gestionnaire/View/GestionnaireBornePage.xaml
+++ b/Solary_Gestionnaire/View/GestionnaireBornePage.xaml
@@ -5,8 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Solary_Gestionnaire.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="#1E1E2F">
+
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel x:Name="BorneListPanel" Margin="20">
+
+
+            <TextBlock Text="Liste des Bornes" FontSize="24" Foreground="White" 
+               FontWeight="Bold" Margin="0,10,0,20"/>
+        </StackPanel>
+
+    </ScrollViewer>
 </UserControl>
