--- a/Solary_Gestionnaire/View/GestionnaireUserPage.xaml
+++ b/Solary_Gestionnaire/View/GestionnaireUserPage.xaml
@@ -1,17 +1,28 @@
 ﻿<UserControl x:Class="Solary_Gestionnaire.View.GestionnaireUserPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Solary_Gestionnaire.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             xmlns:local="clr-namespace:Solary_Gestionnaire.ViewModel"
              Background="#1E1E2F">
 
+
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel x:Name="UserListPanel" Margin="20">
-            <TextBlock Text="Liste des Utilisateurs" FontSize="24" Foreground="White" 
-                       FontWeight="Bold" Margin="0,0,0,20"/>
+        <StackPanel Margin="20">
+            <TextBlock Text="Liste des Utilisateurs" FontSize="24" Foreground="White" FontWeight="Bold" Margin="0,0,0,20"/>
+
+            <ItemsControl ItemsSource="{Binding Users}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Border Background="#2A2A3D" CornerRadius="10" Padding="15" Margin="0,0,0,15">
+                            <StackPanel>
+                                <TextBlock Text="{Binding Email}" Foreground="White" FontSize="18" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding Role}" Foreground="LightGray" FontSize="14"/>
+                                <TextBlock Text="{Binding StatusCompte}" Foreground="LightGray" FontSize="14"/>
+                                <TextBlock Text="{Binding DateCreation, StringFormat='Créé le: {0:dd/MM/yyyy}'}" Foreground="LightGray" FontSize="14"/>
+                            </StackPanel>
+                        </Border>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
